log in activity created

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,8 +15,8 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:layout_constraintBottom_toTopOf="@+id/logInButtonNavHeader"
@@ -49,13 +49,12 @@
 
     <Button
         android:id="@+id/logInButtonNavHeader"
-        android:layout_width="wrap_content"
+        android:layout_width="88dp"
         android:layout_height="32dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:background="@android:color/transparent"
-        android:gravity="center_vertical"
         android:onClick="loginBtnNavClicked"
         android:text="Log In"
         app:layout_constraintBottom_toBottomOf="parent"
